--- a/assignstyles.css
+++ b/assignstyles.css
@@ -1,5 +1,5 @@
 section {
-    {font-family: 'Courgette', cursive;}
+    font-family: 'Courgette', cursive;
     text-align: center;
 }
 
@@ -38,10 +38,14 @@ hr {
 }
 
 button {
+    cursor: pointer;
     color: white;
-    background-color rgb(31, 128, 240);
+    background-color: rgb(31, 128, 240);
     border-radius: 50px;
     border: none;
     padding: 8px 12px;
     margin-top: 60
+    
+
+    
 }
