--- a/tablestyles.css
+++ b/tablestyles.css
@@ -3,17 +3,34 @@ table{
     margin: auto;
 }
 
-h1{
-    text-align: center;
-}
+
 
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
     padding: 10px 20px;
+    text-align: left;
 }
 
-th {
-    background-color: darkcyan;
+caption {
+    margin: 40px 0 20px 0;
+    font-size: 30px;
+    font-weight: 900;
+}
+
+div {
+    text-align: center;
+}
+
+button { 
+    cursor: pointer;
     color: white;
+    background-color: rgb(31, 128, 240);
+    border-radius: 50px;
+    border: none;
+    padding: 8px 12px;
+    margin-top: 40px;
+    text-align: center;
+    align-items:center;
+    
 }
